RESOLVED FIXED99572
REGRESSION(r131421): Text baseline becomes incorrect after re-layout of input[type=time]
https://bugs.webkit.org/show_bug.cgi?id=99572
Summary REGRESSION(r131421): Text baseline becomes incorrect after re-layout of input...
Kent Tamura
Reported 2012-10-17 02:42:40 PDT
e.g. <span style="font-size: 64px;">Foo</span> <input type="time" id="time1"> <input type="time" id="time2"> 1. Render this 2. Setting "23:59" to time1.value 3. The time1 field jumps up (See attachment)
Attachments
Screenshot (7.10 KB, image/png)
2012-10-17 02:44 PDT, Kent Tamura
no flags
Patch (4.74 KB, patch)
2012-10-17 02:56 PDT, Kent Tamura
no flags
Kent Tamura
Comment 1 2012-10-17 02:44:21 PDT
Created attachment 169141 [details] Screenshot
Kent Tamura
Comment 2 2012-10-17 02:56:35 PDT
Kentaro Hara
Comment 3 2012-10-17 03:24:18 PDT
Comment on attachment 169143 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=169143&action=review Looks OK > LayoutTests/fast/forms/time-multiple-fields/time-multiple-fields-static-relayout.html:12 > +container.remove(); Does this work?
Kent Tamura
Comment 4 2012-10-17 03:27:12 PDT
Comment on attachment 169143 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=169143&action=review >> LayoutTests/fast/forms/time-multiple-fields/time-multiple-fields-static-relayout.html:12 >> +container.remove(); > > Does this work? Yes. WebKit has Element::remove().
WebKit Review Bot
Comment 5 2012-10-17 03:40:14 PDT
Comment on attachment 169143 [details] Patch Clearing flags on attachment: 169143 Committed r131581: <http://trac.webkit.org/changeset/131581>
WebKit Review Bot
Comment 6 2012-10-17 03:40:18 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.