REGRESSION(r131421): Text baseline becomes incorrect after re-layout of input[type=time] https://bugs.webkit.org/show_bug.cgi?id=99572

Reviewed by Kentaro Hara.

Source/WebCore:

We use flexible box since r131421, and it seems text baseline becomes
incorrect if there are text nodes in a flex container.

Test: fast/forms/time-multiple-fields/time-multiple-fields-static-relayout.html

* css/html.css:
(input::-webkit-datetime-edit-text): Added.
* html/shadow/DateTimeEditElement.cpp:
(WebCore::DateTimeEditBuilder::visitLiteral):
Wrap text with an element with ::-webkit-datetime-edit-text.

LayoutTests:

* fast/forms/time-multiple-fields/time-multiple-fields-static-relayout-expected.txt: Added.
* fast/forms/time-multiple-fields/time-multiple-fields-static-relayout.html: Added.


Canonical link: https://commits.webkit.org/117537@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@131581 268f45cc-cd09-0410-ab3c-d52691b4dbfc